--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.9.3",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "firebase": "^7.16.0",
+    "latest": "npm:latest@^0.2.0",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "sass": "^1.26.10",
+    "typescript": "^3.8.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
